# FIDBOT_ROS

./: README.md
EG4301_IMU/: EG4301_IMU.atsln  EG4301_IMU.cppproj  EG4301_IMU.ino
EG4301_IMU/__vm/: .EG4301_IMU.vsarduino.h
FIDBOT_ARDUINO_v7/: FIDBOT_ARDUINO_v6.h  FIDBOT_ARDUINO_v7.ino  ros.h
FIDBOT_MOTORSV3/: FIDBOT_MOTORSV3.cppproj  FIDBOT_MOTORSV3.ino
FIDBOT_MOTORSV3/Debug/: FIDBOT_MOTORSV3.hex  FIDBOT_MOTORSV3.ino.elf  FIDBOT_MOTORSV3.ino.with_bootloader.hex  board.buildinfo
FIDBOT_MOTORSV3/__vm/: .FIDBOT_MOTORSV3.vsarduino.h  Compile.vmps.xml  Configuration.Debug.vmps.xml
FIDBOT_MOTORSV3_wo_ROS/: FIDBOT_MOTORSV3_wo_ROS.cppproj  FIDBOT_MOTORSV3_wo_ROS.ino
FIDBOT_MOTORSV3_wo_ROS/Debug/: FIDBOT_MOTORSV3_wo_ROS.elf  FIDBOT_MOTORSV3_wo_ROS.hex  (+2 more)
FIDBOT_MPU9250_no_tf/: FIDBOT_MPU9250_no_tf.ino
Ultrasonic_w_temp_COMBv3_w_ROS/: Ultrasonic_w_temp_COMBv3_w_ROS.ino
Ultrasonic_w_temp_COMBv3_wo_ROS/: Ultrasonic_w_temp_COMBv3_wo_ROS.ino
Ultrasonic_w_temp_SINGLE/: Ultrasonic_w_temp_SINGLE.cppproj  Ultrasonic_w_temp_SINGLE.ino
turtlebot_ws/src/differential_drive/: CMakeLists.txt  package.xml  setup.py
turtlebot_ws/src/differential_drive/launch/: differential_drive_launch.launch
turtlebot_ws/src/differential_drive/param/: differential_drive.yaml
turtlebot_ws/src/differential_drive/src/: diff_tf_differential.py  diff_tf_direct_drive.py  diff_tf_old.py  pid_velocityA.py  pid_velocityD.py  twist_to_motors.py  twist_to_motors_old.py  wheel_scaler.py
turtlebot_ws/src/differential_drive/srcv2/: diff_tf.py  pid_velocityA.py  pid_velocityD.py  twist_to_motors.py
(+517 files in other folders)
